[metadata]
name = pymag
version = 0.0.1a
author = omid-b
author_email = omid.bagherpur@bhp.com
description = a set of tools for magnetic data processing and modelling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omid-b/pymag
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

setup_requires =
    numpy>=1.19
    Cython>=0.29.21

install_requires =
    numpy>=1.19
    Cython>=0.29.21

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymag = pymag.main:main

