[metadata]
name = gdp
version = 0.2.0a
author = omid-b
author_email = omid.bagherpur@gmail.com
description = a set of tools for geophysical data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omid-b/gdp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

setup_requires =
    numpy>=1.19
    Cython>=0.29.21

install_requires =
    numpy>=1.19
    pandas>=1.1
    obspy>=1.2
    Cython>=0.29.21
    scipy>=1.7.0
    geopandas
    rasterio
    earthpy
    netCDF4
    seaborn
    pyclipper
    PyQt5
    basemap
    basemap-data-hires
    bs4
    shapely
    alphashape


[options.packages.find]
where = src
    
  
[options.entry_points]
console_scripts =
    gdp = gdp.main:main

